--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
     "react-scroll": "^1.9.3",
+    "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
