--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@tailwindcss/vite": "^4.1.5",
     "aceternity-ui": "^0.2.2",
     "clsx": "^2.1.1",
+    "emailjs-com": "^3.2.0",
     "motion": "^12.9.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
     "react-scroll": "^1.9.3",
+    "react-signature-canvas": "^1.1.0-alpha.2",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.2.0"
   },
