--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/vite": "^4.1.5",
     "aceternity-ui": "^0.2.2",
+    "aos": "^2.3.4",
     "clsx": "^2.1.1",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^12.12.2",
     "motion": "^12.9.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
